# Resume_AI

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  resumeai_audit_report.md  start_backend.py
apps/frontend/: package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
archive/legacy_api/: app.py
backend/: __init__.py
backend/app/: __init__.py  main.py
backend/tests/: __init__.py
data/: empty_profile.json  master_profile.json  master_profile.mutated.json  master_profile.original.json
data/metrics/: cache_metrics.jsonl  stage_metrics.jsonl
data/reports/: phase8_quick_report.json
docs/: failure_taxonomy.md  idempotency.md  internal_output_confidence.md  operator_runbook.md  phase1_rebuild_audit.md  phase1_rebuild_final.md  phase6_verification.md  phase7_evaluation_foundation.md  phase8_release_verification.md  pipeline_profiling.md  privacy_data_handling.md  runtime_config.md  safe_cache.md  safe_fallbacks.md  secret_handling.md  stage_metrics.md
docs/internal/: phase1_pipeline_integration.md  phase5_eval_scoring_rubric.md  phase5_generation_quality_rubric.md  phase5_role_style_policy_examples.md
fixtures/evaluation/: README.md
for_ai_agent/phase_6/: README.md  artifact_storage_cleanup.md  db_schema_runs_artifacts.md  logging_progress_events.md  pipeline_contracts_and_flow.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json
scripts/: run_phase3_eval.py  run_phase5_eval.py
tests/: test_jd_parse_scorer.py  test_payload_integrity.py  test_phase2_eval.py  test_selection_evaluation.py
(+585 files in other folders)
